Passes Inheritance Javadoc
Added TechBase
Improved pass loading
Made constructer and methods not overrided
Added some JavaDoc stuff